snapshots/truth__parse__tests__bad_ins_empty.snap
---
source: src/parse/tests.rs
expression: "expect_parse_error::<ast::Expr>(\"instruction\", r#\" ins_() \"#).trim()"
---
error: invalid instruction identifier
  ┌─ <input>:1:2
  │
1 │  ins_() 
  │  ^^^^ invalid instruction identifier
  │
  = identifiers beginning with 'ins_' must end in a canonically-formatted integer, e.g. 'ins_42'.
