snapshots/truth__parse__tests__bad_ins_identifier_2.snap
---
source: src/parse/tests.rs
expression: "expect_parse_error::<ast::Expr>(\"instruction\", r#\" ins_a() \"#).trim()"
---
error: invalid instruction identifier
  ┌─ <input>:1:2
  │
1 │  ins_a() 
  │  ^^^^^ invalid instruction identifier
  │
  = identifiers beginning with 'ins_' must end in a canonically-formatted integer, e.g. 'ins_42'.
